force-app/main/default/objects/df_160_genstandslegat__c/df_160_genstandslegat__c.object-meta.xml
<CustomObject>
    <label>Genstandslegat</label>
    <nameField>
        <label>Genstandslegat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genstandslegats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>