force-app/main/default/objects/df_160_genstandslegat__c/fields/genst_andelsbevis__c.field-meta.xml
<CustomField>
    <fullName>genst_andelsbevis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har vi modtaget andelsbevis?</label>
    <type>Checkbox</type>
</CustomField>