force-app/main/default/objects/df_160_genstandslegat__c/fields/genstands_fordeling__c.field-meta.xml
<CustomField>
    <fullName>genstands_fordeling__c</fullName>
    <label>Hvornår skal genstandslegatet fo e8aa3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>genstands_fordeling_frst</fullName>
                <label>Efter førstafdøde</label>
            </value>
            <value>
                <fullName>genstands_fordeling_lngst</fullName>
                <label>Efter længstlevende</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>