force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_adresse__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_adresse__c</fullName>
    <label>Adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>