force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_by__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_by__c</fullName>
    <label>By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>