force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_cprnummer__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_cprnummer__c</fullName>
    <label>CPR-nummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>