force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_cvrnummer__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_cvrnummer__c</fullName>
    <label>CVR-nummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>