force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_efternavn__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_efternavn__c</fullName>
    <label>Efternavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>