force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_ejendomsnummer__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_ejendomsnummer__c</fullName>
    <label>Ejendomsnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>