force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_fornavn__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_fornavn__c</fullName>
    <label>Fornavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>