force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_genstand__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_genstand__c</fullName>
    <label>Genstand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>