force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_lejlighedsnummer__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_lejlighedsnummer__c</fullName>
    <label>Lejlighedsnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>