force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_matrikelnummer__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_matrikelnummer__c</fullName>
    <label>Matrikelnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>