force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_mrke__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_mrke__c</fullName>
    <label>Mærke</label>
    <length>255</length>
    <type>Text</type>
</CustomField>