force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_nominel_ejerandel__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_nominel_ejerandel__c</fullName>
    <label>Nominel ejerandel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>