force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_personligt__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_personligt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personligt genstandslegat</label>
    <type>Checkbox</type>
</CustomField>