force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_postnummer__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_postnummer__c</fullName>
    <label>Postnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>