force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_registreringsnummer__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_registreringsnummer__c</fullName>
    <label>Registreringsnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>