force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_stel_vin_nummer__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_stel_vin_nummer__c</fullName>
    <label>Stelnummer (VIN-nummer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>