force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_tinglyst_areal__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_tinglyst_areal__c</fullName>
    <label>Tinglyst areal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>