force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_type__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_type__c</fullName>
    <label>Type af genstand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>genstlegat_bil</fullName>
                <label>Bil</label>
            </value>
            <value>
                <fullName>genstlegat_mc</fullName>
                <label>Motorcykel</label>
            </value>
            <value>
                <fullName>genstlegat_andel</fullName>
                <label>Andelsbolig</label>
            </value>
            <value>
                <fullName>genstlegat_ejerlejl</fullName>
                <label>Ejerlejlighed</label>
            </value>
            <value>
                <fullName>genstlegat_hus</fullName>
                <label>Hus</label>
            </value>
            <value>
                <fullName>genstlegat_virksomhed</fullName>
                <label>Virksomhed</label>
            </value>
            <value>
                <fullName>genstlegat_andet</fullName>
                <label>Andet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>