force-app/main/default/objects/df_160_genstandslegat__c/fields/genstlegat_virksomhedens_navn__c.field-meta.xml
<CustomField>
    <fullName>genstlegat_virksomhedens_navn__c</fullName>
    <label>Virksomhedens navn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>