force-app/main/default/objects/df_160_genstandslegat__c/fields/modtager_genstandslegat__c.field-meta.xml
<CustomField>
    <fullName>modtager_genstandslegat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modtager af genstandslegat</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>modtager_genstandslegat</relationshipLabel>
    <relationshipName>modtager_genstandslegat</relationshipName>
    <type>Lookup</type>
</CustomField>